Revision history for DBD::Oracle

Changes in DBD-Oracle 1.XX
 [DOCUMENTATION]
 - add mention of the github mirror of the subversion repository
 - add 'resources' info to META.yml

Changes in DBD-Oracle 1.31_00

 [ENHANCEMENTS]
 - Makefile.PL's options are now documented
 - move 'explain' to '/examples' directory

 [BUG FIXES]
 - support development release versions in GetInfo (Martin J. Evans)
 - don't gag diag() on the tests by default
 - SKIP condition in 10general.t was reversed (reported by Alois) [RT#46761]
 - Check for LD_LIBRARY_PATH_(32|64) as well for solaris [RT#46761]
 - convert a symbolically linked ORACLE_HOME to an absolute path 
    (patch by H.Merijn Brand, applied by Martin J. Evans) [rt70785]

 [DOCUMENTATION]
 - announce that Oraperl will be removed from the dist by v1.38.
 - add Mac OS instructions for Lion (patch by David Wheeler) [rt71109]
 - fixed minor typo in POD (John Scoles)

Changes in DBD-Oracle 1.30
  [DOCUMENTATION]
 - add warning about RT#69350 in documentation

Changes in DBD-Oracle 1.29_1
 [ENHANCEMENTS]
 - added support for TAF callback (John Scoles)
 - now trap OCIServerAttach errors (patch by Marc Fielding, applied
    by Martin J. Evans) [rt68958]
 - added installation notes for MAC Snow Leopard (Martin J. Evans)
 - added '/etc' to the search paths for tnsnames.ora (Martin J. Evans, Jay Senseman)
    [rt67942]
 - removed support for ProcC connections (John Scoles)
 - added ora_db_shutdown and ora_db_startup private functions (Steffen Goeldner)
 - added Test::Simple 0.90 to build_requires as we use note etc (Martin J.  Evans)

 [BUG FIXES]
 - fixed bug in bind_col which was broken in 1.27 and stopped anyone using
    a string as a column number. e.g., '1' (Martin J. Evans, Alexander
    Foken)
 - removed obsolete oparse_lang (John Scoles)
 - fixed some compiler warnings in dbdimp.c and oci8.c (Martin J. Evans)
 - added missing OCIServerRelease to oci.def (Martin J. Evans) [rt68172]